--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 
 		<!-- External Stylesheets -->
 		<link rel="stylesheet" href="lib/leaflet/leaflet.css">
+		<link rel="stylesheet" href="lib/Leaflet.markercluster/MarkerCluster.css">
+		<link rel="stylesheet" href="lib/Leaflet.markercluster/MarkerCluster.Default.css">
+		<link rel="stylesheet" href="lib/jquery/jquery-ui-1.11.4/jquery-ui.min.css">
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 		<!-- Internal Stylesheets -->
 		<link rel="stylesheet" href="css/style.css">
 		<!--[if IE<9]>
@@ -16,17 +20,28 @@
 
 	<body>
 
+		<div id="dialog" title="Detailed Information">Click on a marker to get more information.</div>
+		<div id="slider"></div>
+		<div id="slider-buttons">
+			<span class="fa fa-fast-backward"></span><!--
+			--><span class="fa fa-step-backward"></span><!--
+			--><span class="fa fa-play"></span><!--
+			--><span class="fa fa-step-forward"></span><!--
+			--><span class="fa fa-fast-forward"></span>
+		</div>
 	    <div id="map"></div>
 			
 		<!--you can also use this space for internal scripts or stylesheets;
 		place these within <script> or <style> tags-->
 
 		<!-- External Scripts-->
-		<script type="text/javascript" src="lib/jquery/jquery-1.12.0.min.js"></script>
 		<script type="text/javascript" src="lib/leaflet/leaflet-src.js"></script>
+		<script src="lib/Leaflet.markercluster/leaflet.markercluster-src.js"></script>
+		<script type="text/javascript" src="lib/jquery/jquery-1.12.0.min.js"></script>
+		<script src="lib/jquery/jquery-ui-1.11.4/jquery-ui.min.js"></script>
 		<!-- Internal Scripts -->
 		<!--<script type="text/javascript" src="js/tutorials.js"></script>-->
 		<!--<script type="text/javascript" src="js/main.js"></script>-->
-		<script type="text/javascript" src="js/geojson.js"></script>
+		<script type="text/javascript" src="js/main.js"></script>
 	</body>
 </html>
