activity 5 part 2 commit
completed

--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
 
 	<body>
 
-		<div id="dialog" title="Detailed Information">Click on a marker to get more information.</div>
+		<div id="dialog" title="Map Legend">
+			<!--<span style="padding: 0px 15px;">|</span>-->
+		</div>
 		<div id="slider"></div>
 		<div id="slider-buttons">
 			<span class="fa fa-fast-backward"></span><!--
